--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: pshBAR
 Type: Package
 Title: Broken Adaptive Ridge for Competing Risks Regression
-Version: 1.0.0
+Version: 1.1.0
 Author: Eric S. Kawaguchi
-Maintainer: Eric S. Kawaguchi <erickawaguchi@ucla.edu>
+Maintainer: Eric S. Kawaguchi <ekawaguc@usc.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: GPL (>= 2)
@@ -12,5 +12,5 @@ LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp,
     survival
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Suggests: testthat
